# AI-Agent-RAG-Pipeline

./: .env.example  .gitignore  CHANGELOG.md  CHANGES.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
data/ground_truth/: eval_dataset.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/chat/: ChatPanel.tsx  CitationCard.tsx  MessageBubble.tsx
frontend/src/components/documents/: UploadPanel.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/validation/: ValidationReport.tsx
frontend/src/hooks/: useChat.ts  useDocuments.ts  useValidation.ts
frontend/src/store/: sessionStore.ts
frontend/src/types/: api.ts
prompts/rag/: qa.txt  validate.txt
scripts/: init_collections.py  seed_test_data.py
src/api/: deps.py  main.py
src/api/middleware/: auth.py  logging.py
src/api/routes/: collections.py  documents.py  search.py  validate.py  websocket.py
src/common/: database.py  exceptions.py  logging.py  storage.py
src/models/: document.py
src/rag/: config.py  router.py
src/rag/chunking/: base.py  factory.py  fixed_size.py  hierarchical.py  semantic.py  table_aware.py
src/rag/embeddings/: base.py  e5_large.py
src/rag/evaluation/: ragas_eval.py  retrieval_metrics.py
src/rag/llm/: client.py
src/rag/parsing/: base.py  docx.py  factory.py  pdf.py  txt.py
src/rag/pipeline/: ingestion.py  retrieval.py  validation.py
src/rag/repositories/: document_repository.py
src/rag/reranker/: base.py  cross_encoder.py
src/rag/vectorstore/: client.py  collections.py  operations.py  sparse.py
src/schemas/: api.py  chunk.py  document.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_collections.py
tests/unit/: test_chunking.py  test_embeddings.py  test_parsing.py  test_reranker.py  test_retrieval_metrics.py  test_retrieval_service.py  test_router.py  test_table_aware_chunking.py  test_validation_parser.py
