[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-agent-kod"
version = "0.1.0"
description = "RAG pipeline for bank credit document analysis"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Config & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Logging
    "structlog>=24.4.0",

    # RAG
    "qdrant-client>=1.12.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "sentence-transformers>=3.3.0",
    "tokenizers>=0.21.0",
    "transformers>=4.46.0",

    # Storage
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "redis[hiredis]>=5.2.0",
    "minio>=7.2.0",

    # Background tasks
    "celery>=5.4.0",

    # HTTP client
    "httpx>=0.28.0",

    # API extras
    "python-multipart>=0.0.18",
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "testcontainers[qdrant]>=4.8.0",
]
eval = [
    "ragas>=0.2.0",
    "deepeval>=2.0.0",
]

# =============================================================================
# Tool configuration
# =============================================================================

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast tests with mocks (no infrastructure)",
    "integration: requires running infrastructure or testcontainers",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "ASYNC"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
